# otel-finance

./: .gitignore  README.md  build_lib.sh  docker-compose-local.yml  docker-compose-playback.yml  docker-compose-record.yml  docker-compose.yml  supports.sh
elasticsearch/: Dockerfile  alias.py  aliases.py  app.py  context.py  dashboards.ndjson  kibana.py  ml.py  setup.sh  slo.py  test.sh
elasticsearch/apikey/: apikey.sh
elasticsearch/assistant/: openai.sh
elasticsearch/context/: context.sh
elasticsearch/dashboards/: dashboards.ndjson  dashboards.sh
elasticsearch/ml/: market_factor_by_symbol.json  ml.sh  shares_by_customer.json  trained.py
elasticsearch/old/: setup.sh
elasticsearch/resources/: dashboards.ndjson
elasticsearch/slos/: slos.sh  trader_availability.json  trader_latency.json
image/: Makefile  apmotel.pkr.hcl  elastic.pkr.hcl  k3s.pkr.hcl  rca.pkr.hcl  vscode-elastic.pkr.hcl
image/apmotel/: apmotel-install.sh
image/elastic/: elastic-install.sh  elastic-llm.sh  elastic-openai.sh  elastic-semantic.sh  elastic-start.service  elastic-start.sh  llm-key.sh
image/k3s/: k3s-install.sh  k3s-start.sh
image/rca/: rca-install.sh
image/vscode/: vscode-install.sh
image/vscode-container/: Dockerfile  deploy.sh  vscode-default-python-kernel-0.0.2.vsix
instruqt_frontend/: Dockerfile  README.md  default.conf
lib/: build.sh
lib/python/baggage-log-record-processor/: pyproject.toml
resources/: Dockerfile  app.py  assistant.py  case.py  context.py  errors.py  kibana.py  playback.py  requirements.txt  slo.py  space.py
resources/apikey/: apikey.sh
(+259 files in other folders)
